fix: overlapping lines

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -14,6 +14,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 code {
@@ -92,13 +94,15 @@ em {
 ::-webkit-scrollbar {
   width: 10px;
   height: 10px;
+  z-index: 100;
+
 }
 ::-webkit-scrollbar-button {
   width: 0px;
   height: 0px;
 }
 ::-webkit-scrollbar-thumb {
-background: #36213e;
+  background: #36213e;
   border: 0px none #ffffff;
   border-radius: 50px;
 }
@@ -107,6 +111,7 @@ background: #36213e;
   background: transparent;
   border: 0px none #ffffff;
   border-radius: 50px;
+  z-index: 100;
 }
 ::-webkit-scrollbar-corner {
   background: transparent;
