--- a/src/style/components/SkillView.scss
+++ b/src/style/components/SkillView.scss
@@ -4,7 +4,7 @@
     align-items: center;
     overflow-y: hidden;
     overflow-x: scroll;
-    margin: 10px;
+    // margin: 10px;
     background-color: #D9D9D9;
     border-radius: 12px;
     border: 3px solid black;
